--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,5 +1,137 @@
+body {
+    padding-top: 20px;
+}
 
+body,
+html,
+input,
+textarea {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
+input,
+label,
+img,
+th {
+    vertical-align: middle;
+}
+
+/* header nav */
+
+.nav>li>a {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.header {
+    height: 30px;
+    color: #fff;
+    background-color: #70a1ce;
+}
+
+.header .title {
+    width: 150px;
+    height: 30px;
+    float: left;
+    line-height: 30px;
+    text-align: center;
+    font-size: 1.2em;
+    margin: 0;
+    padding: 0;
+}
+
+.header .title a {
+    color: #fff;
+}
+
+.page_menu {
+    margin-left: 0px;
+    position: absolute;
+    box-sizing: border-box;
+    width: 150px;
+    /* height: 100%; */
+    /* background: #4d5e70 bottom; */
+}
+
+.page_menu .left-head {
+    clear: both;
+    height: 29px;
+    line-height: 30px;
+    text-align: center;
+    background-color: #f3f9fa;
+    border-bottom: 1px solid #eee;
+}
+
+.page_menu .left-head span {
+    padding-right: 12px;
+    height: 16px;
+    float: right;
+    margin-top: 5px;
+}
+
+.page_menu .left-head span a.refresh {
+    width: 16px;
+    height: 16px;
+    font-size: 16px;
+    background: url(../img/bg.gif) no-repeat -89px -569px;
+}
+
+.page_menu .left-head span a.refresh:hover {
+    background-position: -109px -569px;
+}
+
+#browser {
+    overflow: auto;
+}
+
+.page_content {
+    /* margin-left: 160px; */
+    float: left;
+    padding-left: 160px;
+    overflow-y: overlay;
+    overflow-x: hidden;
+    clear: both;
+    min-width: 100%;
+    min-height: 500px;
+}
+
+#home {
+    overflow: hidden;
+    width: 100%;
+    clear: both;
+    height: 29px;
+    line-height: 29px;
+    background-color: #f3f9fa;
+    border-bottom: 1px solid #eee;
+}
+
+#position {
+    margin-left: 15px;
+}
+
+#shortcut {
+    float: right;
+}
+
+#shortcut a {
+    display: block;
+    float: left;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+#shortcut a:hover {
+    background-color: #eee;
+}
+
+.footer {
+    height: 28px;
+    width: 100%;
+    border-top: 1px solid #eee;
+    background-color: #f7f7f7;
+    text-align: center;
+    line-height: 22px;
+}
 
 pre {
     white-space: pre-wrap;
@@ -7,10 +139,6 @@ pre {
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-size: 100%;
 }
 
 input.dialog {
@@ -29,40 +157,39 @@ input.dialog {
     font-weight: 700;
 }
 
-address, cite, dfn, em, var {
+address,
+cite,
+dfn,
+em,
+var {
     font-style: normal;
 }
 
-code, kbd, pre, samp {
+code,
+kbd,
+pre,
+samp {
     font-family: courier new, courier, monospace;
 }
 
-ul, ol, li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: #444;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-.white, .white a {
+.white,
+.white a {
     color: #fff
 }
 
-.blue, .blue a {
+.blue,
+.blue a {
     color: #004499
 }
 
-.gray4, a.gray4 {
+.gray4,
+a.gray4 {
     color: #999
 }
 
-.red, .red a, a.red {
+.red,
+.red a,
+a.red {
     color: red;
 }
 
@@ -74,7 +201,7 @@ select optgroup {
     color: #CAC8BB;
 }
 
-select, input, textarea {
+select {
     outline: none;
 }
 
@@ -90,20 +217,9 @@ select[disabled] {
     display: none;
 }
 
-.invisible {
-    visibility: hidden;
-}
-
 .pad-10 {
     padding: 10px;
     overflow: hidden
-}
-
-.clear:after {
-    content: '\20';
-    display: block;
-    height: 0;
-    clear: both;
 }
 
 .img-wrap {
@@ -144,22 +260,6 @@ select[disabled] {
 
 .line-x {
     border-bottom: 1px solid #eee;
-}
-
-.title-1 {
-    border-bottom: 1px solid #eee;
-    padding-left: 5px
-}
-
-.title-2 {
-    text-align: left;
-    height: 34px;
-    *height: 33px;
-    font: 18px/31px "MicroSoft YaHei", "SimHei";
-    color: #333;
-    *line-height: 33px;
-    margin: 0;
-    padding: 8px 0 3px 0px
 }
 
 body fieldset {
@@ -255,38 +355,8 @@ body fieldset.blue legend {
 }
 
 .pagination {
-    padding: 2px 10px 0px;
-    text-align: right
-}
-
-.pagination a {
-    display: inline-block;
-    height: 22px;
-    line-height: 22px;
-    background: #fff;
-    border: 1px solid #e3e3e3;
-    text-align: center;
-    color: #333;
-    padding: 0 10px;
-    margin-left: 1px;
-}
-
-.pagination a:hover {
-    background: #f1f1f1;
-    color: #000;
-    text-decoration: none;
-}
-
-.pagination span {
-    display: inline-block;
-    height: 22px;
-    padding: 0 10px;
-    line-height: 22px;
-    background: #00BEE3;
-    border: 1px solid #00BEE3;
-    color: #fff;
-    text-align: center;
-    margin: 0 -6px 0 1px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 #imgPreview td.on {
@@ -317,30 +387,12 @@ body fieldset.blue legend {
     padding-left: 20px;
 }
 
-.picBut {
-    background: url(../img/picBnt.png) no-repeat 0 -28px;
-    color: #FFF;
-    float: left;
-    text-align: center;
-    font-weight: 700;
-    height: 28px;
-    line-height: 26px;
-    *line-height: 30px;
-    margin-right: 10px;
-    width: 75px
-}
-
-.picBut a {
-    color: #fff;
-    text-decoration: none;
-    width: 75px
-}
-
 .line-box {
     border: 1px solid #d5dfe8;
 }
 
-.table-list td, .table-list th {
+.table-list td,
+.table-list th {
     padding-left: 10px;
     font-weight: normal;
 }
@@ -364,7 +416,8 @@ body fieldset.blue legend {
     padding-bottom: 5px
 }
 
-.table-list tr:hover, .table-list table tbody tr:hover {
+.table-list tr:hover,
+.table-list table tbody tr:hover {
     background: #f1f8ff
 }
 
@@ -373,7 +426,11 @@ body fieldset.blue legend {
     height: 18px
 }
 
-.table-list tr.on, .table-list tr.on td, .table-list tr.on th, .table-list td.on, .table-list th.on {
+.table-list tr.on,
+.table-list tr.on td,
+.table-list tr.on th,
+.table-list td.on,
+.table-list th.on {
     background: #fdf9e5;
 }
 
@@ -384,7 +441,10 @@ body fieldset.blue legend {
     margin-right: 5px
 }
 
-.input-text-c, .input-text, textarea, input.date {
+.input-text-c,
+.input-text,
+textarea,
+input.date {
     border: 1px solid #d0d0d0;
     height: 18px;
     margin: 0 5px 0 0;
@@ -399,7 +459,9 @@ input.date {
     font-size: 12px;
 }
 
-textarea, textarea.input-text, textarea {
+textarea,
+textarea.input-text,
+textarea {
     font-size: 12px;
     height: auto;
     padding: 5px;
@@ -423,10 +485,7 @@ select {
     text-align: center
 }
 
-/*表格表单*/
-.table_form {
-    font-size: 12px
-}
+/* table_form */
 
 .table_form td {
     padding-left: 12px
@@ -458,15 +517,21 @@ select {
     margin-right: 5px;
 }
 
-.table_form td, .table_form th {
+.table_form td,
+.table_form th {
     padding: 8px 0 8px 8px
 }
 
 /* 表单验证 */
-.show-tips, .onFocus, .onError, .onCorrect, .onLoad, .onTime {
+.show-tips,
+.onFocus,
+.onError,
+.onCorrect,
+.onLoad {
     display: inline-block;
     display: -moz-inline-stack;
-    zoom: 1; *display: inline;
+    zoom: 1;
+    *display: inline;
     vertical-align: middle;
     background: url(../swfupload/images/msg_bg.png) no-repeat;
     color: #444;
@@ -504,31 +569,6 @@ select {
     border-color: #40B3FF;
 }
 
-.onLamp {
-    background-position: 3px -200px
-}
-
-.onTime {
-    background-position: 3px -1356px
-}
-
-.picList li {
-    padding: 0 0 8px
-}
-
 .display {
     display: none
-}
-
-.mr10 {
-    margin-right: 10px;
-}
-
-.newscontent {
-    line-height: 30px;
-}
-
-.newscontent li {
-    background: url(../img/link.gif) 0px no-repeat;
-    padding-left: 22px;
 }
