--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -6,6 +6,7 @@ body,
 html,
 input,
 textarea {
+    font-size: 13px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
