--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,125 +1,15 @@
-body, div, ul, ol, li, h1, h2, h3, h4, h5, h6, form, input, p {
-    padding: 0;
-    margin: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
-    font-size: 100%;
-}
-
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
-body, html, input {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 12px;
-    line-height: 1.5;
-    color: #24292e;
-}
-
-a {
-    color: #666666;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #ff6600;
-    text-decoration: none;
-}
-
-img {
-    border: 0;
-    vertical-align: middle;
-    image-rendering: optimizeQuality;
-    -ms-interpolation-mode: bicubic;
-}
-
-input {
-    outline: none;
-    vertical-align: middle;
-    border-top: 1px solid #999999;
-    border-right: 1px solid #e1e1e1;
-    border-bottom: 1px solid #e1e1e1;
-    border-left: 1px solid #999999;
-}
-
-input.text {
-    width: 180px;
-    height: 26px;
-    line-height: 28px;
-    padding: 0px 4px;
-    color: #666666;
-}
-
-input:hover {
-    border: 1px solid #74b9ef;
-}
-
-.table {
-    display: table;
-    height: 100%;
-    width: 100%;
-}
-
-.cell {
-    display: table-cell;
-    vertical-align: middle;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.row {
-    display: table-row;
-    height: 30px;
-    line-height: 30px;
-}
-
 .login {
-    width: 360px;
-    height: 155px;
-    margin: auto;
-    border: 1px solid #ddd;
-}
-
-.login .l {
-    width: 100px;
-    text-align: right;
-    padding-right: 10px;
-}
-
-.login .r {
-    width: calc(100% - 100px);
-    width: -moz-calc(100% - 100px);
-    width: -webkit-calc(100% - 100px);
-}
-
-.login .captcha {
-    width: 90px;
-    text-transform: uppercase;
-    ime-mode: disabled;
-    vertical-align: middle;
-}
-
-.login .login-submit {
-    width: 70px;
-    height: 30px;
-    line-height: 30px;
-}
-
-.powered {
+    width: 100%;
+    max-width: 330px;
+    margin: 16% auto 0 auto;
     text-align: center;
-    font-size: 9px;
-    color: #999999;
 }
 
-.powered a {
-    color: #888888;
-    margin: 0px 3px;
+.input-group {
+    margin-bottom: 20px;
 }
 
-#checkcode {
-    border: 1px solid #999999;
+.text-muted {
+    font-size: 12px;
+    text-transform: capitalize;
 }
