主题文件夹放到根目录

--- a/src/theme/mobile/css/style.css
+++ b/src/theme/mobile/css/style.css
@@ -168,7 +168,7 @@ em {
   color: #8e8d8d;
 }
 
-.header-back .backicon {
+.header-back .icon_user {
   width: 20px;
   height: 20px;
   border-radius: 20px;
