--- a/src/core/views/admin/common/style.css
+++ b/src/core/views/admin/common/style.css
@@ -8,7 +8,7 @@ html,
 input,
 textarea {
     font-size: 13px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* header nav */
