update to v0.2.0 1. 更新：区块支持标识（原：名称）调用 2. 新增：数据库配置功能 3. 新增：兼容支持 Nginx 下自定义路径 4. 新增：支持自定义 URL 格式修改后不需要再次修改服务器URL重写规则 5. 调整：字段调整部分文案和链接修改 6. 调整：模板标签nav名称改为category更符合实际功能 7. 调整：安装数据库指定 utf8mb4 8. 新增：后台路径支持path模式，格式：后台路径/controller/action?其他参数 9. 调整：插件重载时更新信息到数据库 10. 新增：项目捐助通道

--- a/src/template/bootstrap/category_article.html
+++ b/src/template/bootstrap/category_article.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-9 col-sm-8 mainbody">
-            {nav parentid=$catid typeid=1}
+            {category parentid=$catid typeid=1}
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a href="{$vdata['url']}">{$vdata['catname']}</a>
@@ -18,7 +18,7 @@
                 </ul>
             </div>
             <div class="text-center">{$pagination}</div>
-            {/nav}
+            {/category}
         </div>
         <div class="col-md-3 col-sm-4">
             {template sidebar.html}
