--- a/src/template/bootstrap/category_product.html
+++ b/src/template/bootstrap/category_product.html
@@ -7,7 +7,7 @@
   <div class="page bg">
     {template breadcrumb.html}
    <div class="blank10 clear"></div>
-{nav  parentid=$catid typeid=1}
+{category  parentid=$catid typeid=1}
    <div class="newslist">
     <h3><span class="bt">{$vdata['catname']}</span> <span class="more"><a href="{$vdata['url']}">更多&gt;&gt;</a></span></h3> 	
     <ul class="noborder">
@@ -17,7 +17,7 @@
     </ul>
    </div>
    <div class="blank10 clear"></div>
-{/nav}
+{/category}
   </div>
   <div class="clear"></div>
  </div>
