--- a/src/template/bootstrap/forum_category.html
+++ b/src/template/bootstrap/forum_category.html
@@ -2,7 +2,7 @@
 {template forum_nav.html}
 
     <div>
-        {nav parentid=$catid typeid=1}
+        {category parentid=$catid typeid=1}
         <div class="category-list">
             <div class="category-title">
                 <span class="title">{$vdata['catname']}</span>
@@ -17,7 +17,7 @@
                 {/list}
             </ul>
         </div>
-        {/nav}
+        {/category}
     </div>
 
 
