--- a/src/template/bootstrap/index.html
+++ b/src/template/bootstrap/index.html
@@ -2,7 +2,7 @@
 
 <div class="container mainbody home">
     <div class="row">
-        {nav typeid=1 }
+        {category typeid=1 }
         <div class="col-md-4 col-sm-6">
             <div class="panel panel-default home-card">
                 <div class="panel-heading">
@@ -15,7 +15,7 @@
                 </ul>
             </div>
         </div>
-        {/nav}
+        {/category}
     </div>
 </div>
 
