--- a/src/template/bootstrap/sidebar.html
+++ b/src/template/bootstrap/sidebar.html
@@ -1,8 +1,8 @@
 <div class="panel panel-default">
     <div class="panel-heading">栏目</div>
     <div class="list-group">
-        {nav  }
+        {category  }
         <a href="{$vdata['url']}" class="list-group-item{if $current} active{/if}">{$vdata['catname']}</a>
-        {/nav}
+        {/category}
     </div>
 </div>
