--- a/src/template/default/index.html
+++ b/src/template/default/index.html
@@ -2,7 +2,7 @@
 
 <div class="main home-card">
     <div class="container">
-        {nav  }
+        {category  }
         <div class="newwarp bg">
             <div class="newstitle">
                 <h3><a href="{$vdata['url']}" class="more">{$vdata['catname']}</a></h3>
@@ -21,7 +21,7 @@
                 {/list}
             </ul>
         </div>
-        {/nav}
+        {/category}
     </div>
     <div class="link bg">{block 6}</div>
 </div>
