--- a/src/template/default/sidebar.html
+++ b/src/template/default/sidebar.html
@@ -2,9 +2,9 @@
   <div class="sidebar-header">Category</div>
     <div class="sidebar-body">
       <ul>
-{nav  }
+{category  }
         <li{if $current} class="select"{/if}><s></s><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
-{/nav}
+{/category}
     </ul>
   </div>
 </div>
