--- a/src/template/mobile/images/index.html
+++ b/src/template/mobile/images/index.html
@@ -27,9 +27,9 @@
 <!--icon-->
 <div class="icon">
  <ul>
-{nav  }
+{category  }
   <li><a href="{$vdata['url']}"><img src="{$site_template}images/icon01.gif" /><p>{$vdata['catname']}</p></a></li>
-{/nav}
+{/category}
  </ul>
  <br class="clear" />
 </div>
