--- a/src/template/mobile/index.html
+++ b/src/template/mobile/index.html
@@ -38,12 +38,12 @@
   </div>
 
   <div class="index-card">
-    {nav  }
+    {category }
     <div class="card-item">
       <a href="{$vdata['url']}"><img src="/template/mobile/images/icon01.gif" /></a>
       <a class="title" href="{$vdata['url']}">{$vdata['catname']}</a>
     </div>
-    {/nav}
+    {/category}
     <br class="clear" />
   </div>
   <script type="text/javascript" src="/template/mobile/js/slide.js"></script>
@@ -58,4 +58,4 @@
       autoPlay: true
     });
   </script>
-{template footer.html}
+  {template footer.html}
