--- a/src/template/mobile/list_news.html
+++ b/src/template/mobile/list_news.html
@@ -19,9 +19,9 @@ $(document).ready(function(){
 </div>
 <div class="newlist">
  <ul class="tabs" style="margin-top: 0">
-{nav  parentid=$catid typeid=1}
+{category  parentid=$catid typeid=1}
   <li><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
-{/nav}
+{/category}
  </ul>
  <br class="clear" />
  <div class="flexslider2">
