--- a/src/template/default/header.html
+++ b/src/template/default/header.html
@@ -38,18 +38,18 @@
     <div class="nav">
         <ul class="container">
             <li class="nav-item"><a href="{$site_url}">首页</a></li>
-{nav num=5}
+{category num=5}
             <li class="nav-item{if $current} on{/if}">
                 <a href="{$vdata['url']}">{$vdata['catname']}</a>
 {if $vdata['child']}
                 <ul class="sub">
-                    {nav parentid=$vdata[catid]}
+                    {category parentid=$vdata[catid]}
                     <li class="nav-item{if $current} on{/if}"><a href="{$vdata['url']}">{$vdata['catname']}</a></li>
-                    {/nav}
+                    {/category}
                 </ul>
 {/if}
             </li>
-{/nav}
+{/category}
 
 {if $member}
             <li class="nav-item member"><a href="{function.url('member/index')}">会员中心</a></li>
