1. 首页路由配置 2. 完善：模板标签category对参数ismenu、verify、ispost和islook支持

--- a/src/template/mobile/images/index.html
+++ b/src/template/mobile/images/index.html
@@ -9,9 +9,9 @@
 <section class="slider">
  <div class="flexslider">
   <ul class="slides">
-   <li><a href="#"><img src="{$site_template}images/sm.jpg" /></a></li>
-   <li><a href="#"><img src="{$site_template}images/sm.jpg" /></a></li>
-   <li><a href="#"><img src="{$site_template}images/sm.jpg" /></a></li>
+   <li><a href="#"><img src="{$site_template_url}/images/sm.jpg" /></a></li>
+   <li><a href="#"><img src="{$site_template_url}/images/sm.jpg" /></a></li>
+   <li><a href="#"><img src="{$site_template_url}/images/sm.jpg" /></a></li>
   </ul>
  </div>
 </section>
@@ -28,7 +28,7 @@
 <div class="icon">
  <ul>
 {category  }
-  <li><a href="{$vdata['url']}"><img src="{$site_template}images/icon01.gif" /><p>{$vdata['catname']}</p></a></li>
+  <li><a href="{$vdata['url']}"><img src="{$site_template_url}/images/icon01.gif" /><p>{$vdata['catname']}</p></a></li>
 {/category}
  </ul>
  <br class="clear" />
