--- a/src/template/mobile/member/login.html
+++ b/src/template/mobile/member/login.html
@@ -11,7 +11,7 @@
   <form action="" method="post">
     <input type="hidden" value="{$backurl}" name="data[back]" />
     <div class="form-continer">
-      <div class="log-logo"><img src="{$site_template}images/login.png"></div>
+      <div class="log-logo"><img src="{$site_template_url}/images/login.png"></div>
       <div class="form-item">
         <div class="input-continer log-name">
           <input type="text" class="input-tag" name="data[username]" tabindex="1" placeholder="请输入用户名" />
