--- a/src/template/mobile/page.html
+++ b/src/template/mobile/page.html
@@ -1,8 +1,8 @@
 {template head.html}
 {template header.html}
 <div class="title">
- <h1 class="titname">联系我们</h1>
-  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/icon_user.png" /></span></a>
+    <h1 class="titname">联系我们</h1>
+    <a href="javascript:history.back()"><span class="titback"><img src="{$site_template_url}/images/icon_user.png" /></span></a>
 </div>
 <div class="main clearfix">
 {$content}
