--- a/src/template/mobile/category_news.html
+++ b/src/template/mobile/category_news.html
@@ -2,7 +2,7 @@
 <body>
 <!--header-->
 <header class="region clearfix">
- <div class="logo"><a href="{$site_url}"><img src="{$site_template}images/logo.png" /></a></div>
+ <div class="logo"><a href="{$site_url}"><img src="{$site_template_url}/images/logo.png" /></a></div>
  <div id="search" class="clearfix">
   <form class="search " action="" method="get">
    <input type="hidden" value="index" name="c" />
@@ -28,7 +28,7 @@ $(document).ready(function(){
 <header>
 <div class="title">
   <h1 class="titname">{function.breadcrumb($catid, ' &gt;&gt;&nbsp;&nbsp;')}</h1>
-  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template}images/icon_user.png" /></span></a>
+  <a href="javascript:history.back()"><span class="titback"><img src="{$site_template_url}/images/icon_user.png" /></span></a>
 </div>
 
 
